@@ -25,10 +25,11 @@ import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.eclipse.tractusx.ssi.lib.exception.did.DidParseException;
 
-/** The type Did parser. */
+/**
+ * The type Did parser.
+ */
 public class DidParser {
 
   private DidParser() {
@@ -62,7 +63,7 @@ public class DidParser {
           "DID does not contain at least three parts split by ':'. URI: '" + did + "'");
     }
 
-    List<String> methodIdentifierParts = Arrays.stream(did).skip(2).collect(Collectors.toList());
+    List<String> methodIdentifierParts = Arrays.stream(did).skip(2).toList();
 
     return new Did(
         new DidMethod(did[1]),
